--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,9 @@ ENDIF()
 
 SET( TOMAHAWK_VERSION ${TOMAHAWK_VERSION_MAJOR}.${TOMAHAWK_VERSION_MINOR}.${TOMAHAWK_VERSION_PATCH} )
 
-IF( ${TOMAHAWK_VERSION_TWEAK} GREATER 0)
-  SET( TOMAHAWK_VERSION ${TOMAHAWK_VERSION}.${TOMAHAWK_VERSION_TWEAK} )
-ENDIF()
+#IF( ${TOMAHAWK_VERSION_TWEAK} GREATER 0)
+#  SET( TOMAHAWK_VERSION ${TOMAHAWK_VERSION}.${TOMAHAWK_VERSION_TWEAK} )
+#ENDIF()
 IF( TOMAHAWK_VERSION_RC )
   SET( CMake_VERSION ${TOMAHAWK_VERSION}-rc${TOMAHAWK_VERSION_RC} )
 ENDIF()
