--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -362,12 +362,14 @@ endif()
 IF(APPLE OR WIN32)
     include(DeployQt4)
     #FIXME: i want to add plugins in their respective dir, didnt work out on first try
-    add_plugin( "tomahawk_sipjabber" )
-    add_plugin( "tomahawk_siptwitter" )
-    add_plugin( "tomahawk_sipgoogle" )
-    add_plugin( "tomahawk_sipzeroconf" )
+    SET(PLUGIN_LIST "")
+    IF(APPLE)
+        LIST(APPEND PLUGIN_LIST "Tomahawk.app/Contents/Plugins/libtomahawk_sipzeroconf.dylib")
+        LIST(APPEND PLUGIN_LIST "Tomahawk.app/Contents/Plugins/libtomahawk_sipjabber.dylib")
+        LIST(APPEND PLUGIN_LIST "Tomahawk.app/Contents/Plugins/libtomahawk_siptwitter.dylib")
+        LIST(APPEND PLUGIN_LIST "Tomahawk.app/Contents/Plugins/libtomahawk_sipgoogle.dylib")
+    ENDIF()
 
-#SET(PLUGIN_LIST "${CMAKE_BINARY_DIR}/_CPack_Packages/OSX/DragNDrop/${TOMAHAWK_APPLICATION_NAME}-${TOMAHAWK_VERSION}/${EXECUTABLE}/Contents/Plugins/libtomahawk_sipzeroconf.dylib")
     MESSAGE(STATUS "FIXUP PLUGINS: ${PLUGIN_LIST}")
     MESSAGE(STATUS "${PLUGIN_LIST}")
     install_qt4_app( "tomahawk" "qsqlite;qgif;qico;qjpeg;qmng" "${PLUGIN_LIST}")
