--- a/src/sip/CMakeLists.txt
+++ b/src/sip/CMakeLists.txt
@@ -1,10 +1,6 @@
 #SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tomahawk.app/Contents/Plugins/" )
 
-MACRO(add_plugin pluginName )
-    MESSAGE(STATUS "Fixup ${pluginName}")
-    LIST(APPEND PLUGIN_LIST "${CMAKE_BINARY_DIR}/_CPack_Packages/OSX/DragNDrop/Tomahawk-${TOMAHAWK_VERSION}/Tomahawk.app/Contents/Plugins/lib${pluginName}.dylib")
-ENDMACRO()
-
+SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_PLUGIN_DIR}" )
 
 IF( LIBJREEN_FOUND )
     ADD_SUBDIRECTORY( jabber )
